# cmake_project

./: CMakeLists.txt  README.md
include/: lib_demo.h  main.h
src/: CMakeLists.txt  lib_demo.cpp  mian.cpp
